tests/fixtures/errors/invalid_preproc_procedure_return.puml
@startuml
!procedure Bad($x)
!return $x
!endprocedure
!Bad("A")
@enduml
